fixing z-index issue

--- a/less/style.less
+++ b/less/style.less
@@ -1543,7 +1543,7 @@ Intro Page
     position: fixed;
     top: 0;
     left:0;
-    z-index: 9999999;
+    z-index: 99;
     padding-top: 62px;
   }
   .rect-wrap {
